--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0",
-    "webauthn": "file:.."
+    "webauthn": "^0.2.0"
   },
   "scripts": {
     "dev-client": "react-scripts start",
